--- a/ui.html
+++ b/ui.html
@@ -1,7 +1,15 @@
-<h2>Rectangle Creator</h2>
-<p>Count: <input id="count" value="5"></p>
-<button id="create">Create</button>
-<button id="cancel">Cancel</button>
+
+<input id="count" value="5">
+<select>
+  <option>語</option>
+  <option>文</option>
+  <option>段落</option>
+</select>
+<button>Generate</button>
+
+<p>テキストボックスの大きさに合わせてダミーテキストを流し込む</p>
+<button>Auto-generate</button>
+
 <script>
 
 document.getElementById('create').onclick = () => {
