Generate texts only when userselect a text box

--- a/ui.html
+++ b/ui.html
@@ -32,5 +32,12 @@ document.getElementById('generate').onclick = () => {
   }
 }
 
+// コードを簡単にする
+// 言葉の分類ごとだけでなく、テキストボックスの有無も判定することを忘れずに記述する
+// 選択中のツールを判定する方法
+// テキストボックスのサイズを読み込む方法（height？）
+// currentpage.selectionの必要性（なくすと吐き出されたテキストの選択がなくなる）
+// プラグインメッセージのもっと自由度の高い活用方法はないか調べる
+
 
 </script>
