Shorten code.ts

--- a/ui.html
+++ b/ui.html
@@ -32,7 +32,7 @@ document.getElementById('generate').onclick = () => {
   }
 }
 
-// コードを簡単にする
+// テキストの吐き出す場所を、選択中の場所にする
 // テキストボックスのサイズを読み込む方法（height？）
 // プラグインメッセージのもっと自由度の高い活用方法はないか調べる
 
