--- a/ui.html
+++ b/ui.html
@@ -2,11 +2,13 @@
 <div class="wrap">
   <div class="manual-wrap">
     <input type="number" id="count" value="1">
-    <select id="text-unit">
-      <option value="word">語</option>
-      <option value="sentence">文</option>
-      <option value="paragraph">段落</option>
-    </select>
+    <div class="selectbox">
+      <select id="text-unit">
+        <option value="word">語</option>
+        <option value="sentence">文</option>
+        <option value="paragraph">段落</option>
+      </select>
+    </div>
     <button id="manual">Generate</button>
   </div>
 
@@ -23,35 +25,56 @@
   }
   .wrap { padding: 0 16px; }
   .manual-wrap {
+    display: flex;
+    justify-content: space-between;
     margin: 32px 0;
   }
+  input,
+  .selectbox {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+  }
+  select {
+    background: transparent;
+    background-image: none;
+    border: 0;
+    box-shadow: none;
+    height: 32px;
+    outline: none;
+    width: 64px;
+  }
+  .selectbox select::-ms-expand {
+    display: none;
+  }
+  #count {
+    padding: 0 1em;
+    width: 104px;
+  }
   .auto-wrap {
-    padding: 16px 8px;
+    align-items: center;
     background: #F0F0F0;
     border-radius: 2px;
     display: flex;
-    justify-content: space-between;
-    /* align-items: middle; */
+    justify-content: space-around;
+    padding: 16px 8px;
   }
   .desc {
     font-size: 11px;
     line-height: 16px;
-    font-weight: normal;
     max-width: 150px;
   }
   button {
-    color: #ffffff;
-    text-align: center;
     background: #18A0FB;
     border: 0;
     border-radius: 6px;
-    font-size: 11px;
-    padding: 0 10px;
-    height:fit-content;
-    line-height: 30px;
+    color: #ffffff;
     cursor: pointer;
-
-    /* ボタンの中身だけcenterにして、側を右寄せに */
+    font-size: 11px;
+    height: fit-content;
+    line-height: 32px;
+    outline: none;
+    padding: 0 1em;
+    text-align: center;
   }
 </style>
 
