--- a/src/_ui.html
+++ b/src/_ui.html
@@ -24,17 +24,17 @@
     padding: 0;
   }
   #wrap { padding: 0 16px; }
-  .manual-wrap {
+  /* .manual-wrap {
     display: flex;
     justify-content: space-between;
     margin: 0 0 22px;
-  }
-  input,
+  } */
+  /* input,
   .selectbox {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 2px;
-  }
-  select {
+  } */
+  /* select {
     background: transparent;
     background-image: none;
     border: 0;
@@ -42,10 +42,10 @@
     height: 32px;
     outline: none;
     width: 64px;
-  }
-  .selectbox select::-ms-expand {
+  } */
+  /* .selectbox select::-ms-expand {
     display: none;
-  }
+  } */
   #count {
     padding: 0 1em;
     width: 104px;
