Improvements, bugfixes and refactoring

--- a/src/ui.html
+++ b/src/ui.html
@@ -59,7 +59,7 @@
       display: flex;
       margin-bottom: 8px;
     ">
-      <input type="number" id="number" value="1" style="
+      <input type="number" id="number" value="1" min="1" max="65536" style="
         width: 50%;
         flex-grow: 1;
         padding: 0 1em;
