Add sentence generation

--- a/src/ui.html
+++ b/src/ui.html
@@ -16,7 +16,7 @@
       <span style="
         line-height: 32px;
         margin: 0 4px;
-      ">-</span>
+      ">–</span>
       <input type="number" id="max" value="" min="1" max="999" placeholder="Max" style="
         width: 25%;
         flex-grow: 1;
@@ -27,9 +27,8 @@
         margin-left: 8px;
         width: 112px;
       ">
-        <option value="characters">Characters (文字)</option>
-        <option value="sentences">Sentences (文)</option>
-        <option value="paragraphs">Paragraphs (段落)</option>
+        <option value="character">Characters (文字)</option>
+        <option value="sentence">Sentences (文)</option>
       </select>
     </div>
     <div style="
