--- a/src/ui.html
+++ b/src/ui.html
@@ -1,9 +1,33 @@
-<div id="app">
-  <section style="
-    display: flex;
-    flex-direction: column;
+<div id="app" style="
+  display: grid;
+  place-items: center;
+  height: 100%;
+">
+  <div id="error" style="
+    color: #f24822;
+    padding: 14px;
+    text-align: center;
   ">
-    <div class="sectionHeader">Manual (手動)</div>
+    <p style="
+      font-size: 16px;
+    ">
+      Please select some text or rectangle layers.
+    </p>
+    <p style="
+      margin-top: 8px;
+    ">
+      テキストもしくは矩形レイヤーを<br>
+      1つ以上選択してください。
+    </p>
+  </div>
+  <div id="ui" style="
+    display: none;
+  ">
+    <section style="
+      display: flex;
+      flex-direction: column;
+    ">
+      <div class="sectionHeader">Manual (手動)</div>
       <div style="
         display: flex;
       ">
@@ -55,41 +79,41 @@
         margin-top: 8px;
         white-space: nowrap;
       ">Generate (生成)</button>
-    </div>
-  </section>
-  <section style="
-    border-top: 1px solid #e5e5e5;
-    display: flex;
-    flex-direction: column;
-  ">
-    <div class="sectionHeader">Auto (自動)</div>
-    <p>Generate the perfect amount of text to fit the layer’s frame. (テキストボックスのサイズに合わせてダミーテキストを自動生成します。)</p>
-    <div style="
+    </section>
+    <section style="
+      border-top: 1px solid #e5e5e5;
       display: flex;
-      margin-top: 8px;
+      flex-direction: column;
     ">
-      <label for="eos" style="
-        flex-grow: 1;
-        line-height: 32px;
+      <div class="sectionHeader">Auto (自動)</div>
+      <p>Generate the perfect amount of text to fit the layer’s frame. (テキストボックスのサイズに合わせてダミーテキストを自動生成します。)</p>
+      <div style="
+        display: flex;
+        margin-top: 8px;
+      ">
+        <label for="eos" style="
+          flex-grow: 1;
+          line-height: 32px;
+          white-space: nowrap;
+        ">
+          End of sentences (文末):
+        </label>
+        <select id="auto-eos" style="
+          flex-shrink: 0;
+          margin-left: 8px;
+          width: 120px;
+        ">
+          <option value="">None (なし)</option>
+          <option value="random" selected>Random (ランダム)</option>
+          <option value="。">。</option>
+        </select>
+      </div>
+      <button id="auto" style="
+        margin-top: 8px;
         white-space: nowrap;
-      ">
-        End of sentences (文末):
-      </label>
-      <select id="auto-eos" style="
-        flex-shrink: 0;
-        margin-left: 8px;
-        width: 120px;
-      ">
-        <option value="">None (なし)</option>
-        <option value="random" selected>Random (ランダム)</option>
-        <option value="。">。</option>
-      </select>
-    </div>
-    <button id="auto" style="
-      margin-top: 8px;
-      white-space: nowrap;
-    ">Auto-generate (自動生成)</button>
-  </section>
+      ">Auto-generate (自動生成)</button>
+    </section>
+  </div>
 </div>
 
 <style>
@@ -146,7 +170,13 @@
 
 <script>
   onmessage = (event) => {
-    console.log("got this from the plugin code", event.data.pluginMessage)
+    if (event.data.pluginMessage.showUI) {
+      document.getElementById('error').style.display = 'none'
+      document.getElementById('ui').style.display = 'block'
+    } else {
+      document.getElementById('error').style.display = 'block'
+      document.getElementById('ui').style.display = 'none'
+    }
   }
 
   onpageshow = () => {
